--- a/newsite/home.html
+++ b/newsite/home.html
@@ -6,8 +6,6 @@
         <meta charset="UTF-8">
         <title>(?)</title>
         <link href="style.css" rel="stylesheet" type="text/css" media="all"><style>
-            body, .main{height: 100vh}
-            .main{display: grid; align-content:center; padding: 0 40px}
             a.buttons:hover{background-color: #7ba0cc; 
             text-decoration-color:#404040; color: #404040; }
             a.misc:hover{background-color: #202020;
@@ -21,7 +19,7 @@
             #entry a{text-decoration-thickness: 1px;}
         </style></head>
 
-    <body><div class="main">
+    <body><div class="page"><div class="main">
     <h1>nowhere in particular.</h1>
     <p>Hi! Welcome to my corner of the web where i put stuff i like, stuff i do and other things too. (hey that rhymed)<br>
     I... don't know how to explain or express this place exactly. It's got places you can go that have stuff in them you might want to look at. Basically.<br>
@@ -39,4 +37,4 @@
         <a href="misc"      title="general miscellanea"        class="misc"    >misc</a><br>
         <a href="buttons"   title="other folks' sites"         class="buttons" >buttons</a> . 
         <a href="sitelog"   title="what's changed"             class="log"     >sitelog</a>
-    </p></div></body>
+    </p></div></div></body>
