--- a/newsite/home.html
+++ b/newsite/home.html
@@ -8,13 +8,13 @@
         <link href="style.css" rel="stylesheet" type="text/css" media="all"><style>
             .page{width: min(85%, 45rem)}
             a.buttons:hover{background-color: #7ba0cc; 
-            text-decoration-color:#404040; color: #404040; }
+            text-decoration-color:#7ba0cc; color: #404040; }
             a.misc:hover{background-color: #202020;
-            text-decoration-color: #15c405; color: #15c405}
+            text-decoration-color: #202020; color: #15c405}
             a.log:hover{background-color: #202020;
-            text-decoration-color: #ffa900; color: #ffa900}
+            text-decoration-color: #202020; color: #ffa900}
             a.websites:hover{background-color: #201868;
-            text-decoration-color: #f2cf68; color: #f2cf68}
+            text-decoration-color: #201868; color: #f2cf68}
             a{text-decoration-thickness: 3px; font-weight: normal;}
             #entry a{text-decoration-thickness: 1px;}
 
