--- a/newsite/home.html
+++ b/newsite/home.html
@@ -19,7 +19,7 @@
             #entry a{text-decoration-thickness: 1px;}
             .summary{text-align: center}
 
-            h1{font-size: 11vw; text-decoration: underline 5px}
+            h1{font-size: 11vw; text-decoration: underline 5px; line-height: 1.25}
             .summary div{display: block; font-size:x-large}
             @media only screen and (min-width: 650px){
             .summary div{display: inline; font-size:xx-large; }
