--- a/sitelog.html
+++ b/sitelog.html
@@ -30,6 +30,9 @@
         <h1>sitelog</h1>
     <p><b>More about the site: </b> I make this site with Firefox in Ubuntu, with a crappy 1366x768 display<br>very much untested on mobile, sorry<br>in existence since july 2022<br>and that's it enjoy the sitelog ig</p>
     <div id="entry">
+        <h2>4/2/2023 14:21</h2>
+        <p>I'm redesigning the site, this time with mobile <b>in mind</b> (wow!) and in <b>light mode</b>! It's gonna be ready sometime in the future!</p> 
+    </div><div id="entry">
         <h2>4/1/2023 11:43</h2>
         <p>I finally made a <a href="/website/words/diary">new words thing</a>!</p> 
     </div><div id="entry">
