--- a/newsite/home.html
+++ b/newsite/home.html
@@ -35,9 +35,9 @@
 
     <body><div class="page"><div class="main">
     <h1>nowhere in particular.</h1>
-    <p>Hi! Welcome to my corner of the web where i put stuff i like, stuff i do and other things too. (hey that rhymed)<br>
+    <p>Hi! Welcome to my bit of the web where i put stuff i like, stuff i do and other things too. (hey that rhymed)<br>
     I... don't know how to explain or express this place exactly. It's got places you can go that have stuff in them you might want to look at. Basically.<br>
-    Making this website has been a very fun experience, including learning html and css, and i hope you like having a gander at it.<br>Feel free to look
+    Making this website has been a very fun (and challenging) experience, including learning html and css, and i hope you like having a gander at it.<br>Feel free to look
     around and explore, however small this site may be.<br>
     <details><summary style="font-weight: bold">current status</summary>
         <div id="entry" style="margin-left: 20px"><div id="statuscafe"><div id="statuscafe-username"></div><div id="statuscafe-content"></div></div><script src="https://status.cafe/current-status.js?name=cvni81" defer></script></div></details></p>
