--- a/newsite/musicians.html
+++ b/newsite/musicians.html
@@ -4,8 +4,16 @@
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap" rel="stylesheet"> 
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@800&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
-        <title>about</title>
+        <title>musicians</title>
         <link href="style.css" rel="stylesheet" type="text/css" media="all"><style>
+            a.bandcamp, a.bandcampbold{text-decoration-color: #00a2ff;}
+            a.bandcamp:hover, a.bandcampbold:hover{background-color: #00a2ff; color: #404040}
+
+            a.spotify, a.spotifybold{text-decoration-color: #00FF00;}
+            a.spotify:hover, a.spotifybold:hover{background-color: #00FF00; color: #404040}
+
+            a.bandcamp, a.spotify{font-weight: normal; text-decoration-thickness: 1px;}
+            a.bandcampbold, a.spotifybold{font-weight: bold; text-decoration-thickness: 2px}
         </style></head>
 
     <body><div class="page"><div class="main">
