--- a/newsite/sitelog.html
+++ b/newsite/sitelog.html
@@ -4,7 +4,7 @@
         <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,300;0,700;1,700&display=swap" rel="stylesheet"> 
         <link href="https://fonts.googleapis.com/css2?family=Noto+Emoji:wght@700&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
-        <title>musicians</title>
+        <title>sitelog</title>
         <link href="style.css" rel="stylesheet" type="text/css" media="all"><style>
             body {
             background-color: #101010;
