--- a/newsite/buttons.html
+++ b/newsite/buttons.html
@@ -19,7 +19,7 @@
 
     <body><div class="page"><div class="main">
     <h1>buttons</h1>
-    <a class="back" href="home">← home</a>
+    <a class="back" href="home">< home</a>
     
     <p>This is the place where we put any and all buttons of other sites! (as many as currently possible)<br>
     Oh and here's mine if you want to put it in your website for some reason<br></p><img src="misc/folder/nowhere.gif" alt="nowhere in particular"><br>
