--- a/newsite/buttons.html
+++ b/newsite/buttons.html
@@ -9,7 +9,7 @@
                 color: #101010;
                 font-family: 'Libre Baskerville', serif;}
             h1{font-size: min(10vw, 3rem); font-style: italic;}
-            h2{margin-bottom: 10px; font-style: italic; font-size: xx-large;}
+            h2{margin-bottom: 10px; font-style: italic; font-size: 1.5rem;}
             h2::before{content: "- "; color: #5d5e6c;}
             a{font-weight: bold; color: #101010; text-decoration-color:#5d5e6c;font-style: italic; text-decoration-thickness: 2px;}
             a:hover{text-decoration-color:#101010; background-color: #101010; color: #b8cadf}
