--- a/newsite/about.html
+++ b/newsite/about.html
@@ -5,7 +5,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@800&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <title>about</title>
-        <link href="style.css" rel="stylesheet" type="text/css" media="all"><style>
+        <link href="styles/style.css" rel="stylesheet" type="text/css" media="all"><style>
         img{margin: 20px auto}
         @media only screen and (min-width: 650px) {
             .about{margin-top: 20px; display: grid; grid-template-columns: 1fr 3fr;}
