--- a/newsite/buttons.html
+++ b/newsite/buttons.html
@@ -4,7 +4,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <title>buttons</title>
-        <link href="style.css" rel="stylesheet" type="text/css" media="all"><style>
+        <link href="styles/style.css" rel="stylesheet" type="text/css" media="all"><style>
             body{background-color: #b8cadf;
                 color: #101010;
                 font-family: 'Libre Baskerville', serif;}
