--- a/newsite/musicians.html
+++ b/newsite/musicians.html
@@ -5,7 +5,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@800&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <title>musicians</title>
-        <link href="style.css" rel="stylesheet" type="text/css" media="all"><style>
+        <link href="styles/style.css" rel="stylesheet" type="text/css" media="all"><style>
             a.bandcamp, a.bandcampbold{text-decoration-color: #00a2ff;}
             a.bandcamp:hover, a.bandcampbold:hover{background-color: #00a2ff; color: #404040}
 
