--- a/newsite/home.html
+++ b/newsite/home.html
@@ -5,7 +5,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@800&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <title>(?)</title>
-        <link href="style.css" rel="stylesheet" type="text/css" media="all"><style>
+        <link href="styles/style.css" rel="stylesheet" type="text/css" media="all"><style>
             .page{width: min(85%, 45rem)}
             a.buttons:hover{background-color: #7ba0cc; 
             text-decoration-color:#7ba0cc; color: #404040; }
