--- a/newsite/sitelog.html
+++ b/newsite/sitelog.html
@@ -5,7 +5,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Noto+Emoji:wght@700&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <title>sitelog</title>
-        <link href="style.css" rel="stylesheet" type="text/css" media="all"><style>
+        <link href="styles/style.css" rel="stylesheet" type="text/css" media="all"><style>
             body {
             background-color: #101010;
             color: #ffa900;
