--- a/newsite/misc/folder.html
+++ b/newsite/misc/folder.html
@@ -13,9 +13,9 @@
         details details{margin-left: 10px}
         </style></head>
 
-    <body><div class="page"><div class="main"><!DOCTYPE html>
+    <body><div class="page"><div class="main">
     <h1>folder</h1>
-    < <a class="back" href="home">back</a>
+    < <a class="back" href="/website/newsite/misc">back</a>
     <p>You open the folder.</p>
     <details>
         <summary><a>index(es)</a></summary>
