--- a/newsite/misc/journal.html
+++ b/newsite/misc/journal.html
@@ -3,7 +3,7 @@
     <head>
         <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;700&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
-        <title>> folder</title>
+        <title>> journalr</title>
         <link href="/website/newsite/styles/miscstyle.css" rel="stylesheet" type="text/css" media="all"><style>
         .entry{background-color: #072502;
         border-left: solid #15c405 5px;
