--- a/newsite/misc/folder.html
+++ b/newsite/misc/folder.html
@@ -16,7 +16,7 @@
     <body><div class="page"><div class="main">
     <h1>folder</h1>
     < <a class="back" href="/website/newsite/misc">back</a>
-    <p>You open the folder.</p>
+    <p>You open the folder.</p></div>
     <details>
         <summary><a>index(es)</a></summary>
         <ul>
@@ -76,5 +76,4 @@
             <li><a href="folder/redlonely.png">redlonely</a>: a version of a doodle that i wanted to use for status.cafe, but i don't think it looks very good.</li>
         </ul>
     </details>
-
-    </div></div></body></html>
+    </div></body></html>
