--- a/newsite/misc/folder.html
+++ b/newsite/misc/folder.html
@@ -15,7 +15,7 @@
 
     <body><div class="page"><div class="main">
     <h1>folder</h1>
-    < <a class="back" href="/website/newsite/misc">back</a>
+    < <a class="back" href="/website/newsite/misc">go back</a>
     <p>You open the folder.</p></div>
     <details>
         <summary><a>index(es)</a></summary>
