--- a/newsite/misc/phrases.html
+++ b/newsite/misc/phrases.html
@@ -2,10 +2,9 @@
 <html>
     <head>
         <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;700&display=swap" rel="stylesheet"> 
-        <meta charset="UTF-8">
+        <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <title>> wall</title>
-        <link href="/website/styles/miscstyle.css" rel="stylesheet" type="text/css" media="all">
-    <style>
+        <link href="/website/newsite/styles/miscstyle.css" rel="stylesheet" type="text/css" media="all"><style>
         #notes{display: grid;
             grid-template-columns: auto auto auto auto auto auto;
             gap: auto}
@@ -15,12 +14,12 @@
             max-width: 150px;
             height: 150px;
             padding: 10px}
-    </style></head>
-    <body>
+        </style></head>
 
+    <body><div class="page"><div class="main">
     <h1>wall</h1>
     <p>You look closer at the sticky notes on the wall.
-    <br>> <a href="/website/misc">go back</a>
+    < <a class="back" href="/website/newsite/misc">go back</a>
     </p>
     <div id="notes">
         <div>What do i know</div>
@@ -43,4 +42,4 @@
         <div>Oh, when july arrives~</div>
         <div>Thinking optional.</div>
         <div>We're feeling pretty loopy today huh?</div>
-    </div></body>
+    </div></div></body></html>
