--- a/newsite/misc/phrases.html
+++ b/newsite/misc/phrases.html
@@ -6,7 +6,7 @@
         <title>> wall</title>
         <link href="/website/newsite/styles/miscstyle.css" rel="stylesheet" type="text/css" media="all"><style>
         #notes{display: grid;
-            grid-template-columns: auto auto auto auto auto auto;
+            grid-template-columns: auto auto;
             gap: auto}
         #notes div{margin-bottom: 10px;
             border: solid #15c405 3px;
