--- a/newsite/misc/phrases.html
+++ b/newsite/misc/phrases.html
@@ -7,7 +7,8 @@
         <link href="/website/newsite/styles/miscstyle.css" rel="stylesheet" type="text/css" media="all"><style>
         #notes{display: grid;
             grid-template-columns: auto auto;
-            margin-top: 2vh}
+            margin: 2vh auto 0 auto; gap: 20px;
+            width: fit-content}
         #notes div{margin-bottom: 10px;
             border: solid #15c405 3px;
             background-color: #072502; 
