--- a/newsite/misc/phrases.html
+++ b/newsite/misc/phrases.html
@@ -15,7 +15,7 @@
             max-width: 150px;
             height: 150px;
             padding: 10px}
-        @media only screen and (min-width: 550px) {
+        @media only screen and (max-width: 550px) {
         #notes{grid-template-columns: auto}}
         </style></head>
 
