--- a/newsite/misc/folder.html
+++ b/newsite/misc/folder.html
@@ -21,7 +21,7 @@
         <summary><a>index(es)</a></summary>
         <ul>
             <li><a href="folder/index">index</a>: an earlier version of the start page with a sidebar and descriptions for pages.</li>
-            <li><a href="folder/index2">index2</a>: refer to <a href="journal#home">journal entry.</a></li>
+            <li><a href="/website/newsite/index">index2</a>: refer to <a href="journal#home">journal entry.</a></li>
         </ul>
         <details>
             <summary><a>earlier version of intro text</a>: I wanted to change this to be more about the site (or as best as i could), 
