--- a/newsite/misc/folder/handdrawn.html
+++ b/newsite/misc/folder/handdrawn.html
@@ -4,7 +4,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8">
         <title>{handdrawn}</title>
-        <link href="/website/styles/istyle.css" rel="stylesheet" type="text/css" media="all">
+        <link href="istyle.css" rel="stylesheet" type="text/css" media="all">
     <style>
         body{background-image:url(/website/doodles/old_background.jpg);
             background-repeat:no-repeat;
