--- a/newsite/misc/journal.html
+++ b/newsite/misc/journal.html
@@ -29,7 +29,7 @@
             Like the entire rest of the site, it looked like absolute crap on mobile.<br>
             We really need to learn to do that...<br>
             And i started with a welcome page like so many other homemade websites have...<br>
-            You can still <a href="folder/index2.html">look at it</a> if you want.<br>
+            You can still look at it if you want.<br>
             I didn't use it because it doesn't mesh well with the rest of the site, the handdrawn thing gives it a cozy, homey feeling,
             which this website ABSOLUTELY does not have.<br>
             I didn't bother saving the other sites because i stopped early at... 3 pages.<br>
