--- a/newsite/misc/folder/difference.html
+++ b/newsite/misc/folder/difference.html
@@ -10,7 +10,7 @@
 
     <body><div class="page"><div class="main">
     <h1>about difference in general</h1>
-    <a class="back" href="home">← folder</a>
+    <a class="back" href="/website/newsite/misc/folder">← folder</a>
     <p>
         Difference is an important thing. It's what keeps the world going round, it gives life spice, it makes existing fun.
         <br>It'd be boring if everyone'd be the same, if nothing new happened each day, wouldn't it?
@@ -24,5 +24,4 @@
         <br><b><i>→ Everyone is equal and different, but not more or less than anyone else.</i></b>
         <br>
         <br>A bit confusing, but i hope you get it.
-        <br><br><a href="/website/misc/folder">go back</a></p>
     </div></div></body></html>
