--- a/newsite/misc/folder/difference.html
+++ b/newsite/misc/folder/difference.html
@@ -10,7 +10,7 @@
 
     <body><div class="page"><div class="main">
     <h1>about difference in general</h1>
-    <a class="back" href="/website/newsite/misc/folder">← folder</a>
+    <a class="back" href="/website/misc/folder">← folder</a>
     <p>
         Difference is an important thing. It's what keeps the world going round, it gives life spice, it makes existing fun.
         <br>It'd be boring if everyone'd be the same, if nothing new happened each day, wouldn't it?
