--- a/newsite/misc/folder/index.html
+++ b/newsite/misc/folder/index.html
@@ -9,14 +9,14 @@
         <link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:wght@700&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8">
         <title>cvni81</title>
-        <link href="/website/misc/folder/style.css" rel="stylesheet" type="text/css" media="all"><style>
+        <link href="style.css" rel="stylesheet" type="text/css" media="all"><style>
             @font-face{font-family: 'Vera Humana 95';
             font-weight: normal;
-            src: url("/website/styles/Vera.ttf")}
+            src: url("styles/Vera.ttf")}
 
             @font-face{font-family: 'Vera Humana 95';
             font-weight: bold;
-            src: url("/website/styles/Verab.ttf")}
+            src: url("styles/Verab.ttf")}
             .all{display: grid;
             grid-template-columns: 350px 1px auto}
             body{min-height:100vh;
@@ -52,18 +52,18 @@
     </div>
     <div style="border:solid #f0f0f0 2px"></div>
     <div style="font-size:x-large; padding-left: 50px; margin: auto 0;">
-        <a href="/website/about">about</a> .......... <span class="small">stuff about me</span><br>
-        <a href="/website/musicians">musicians</a> .......... <span class="small">good music people</span><br>
-        <a href="/website/websites" class="websites">websites</a> .......... <span class="small">cool websites i've collected</span><br>
+        <a href="about">about</a> .......... <span class="small">stuff about me</span><br>
+        <a href="musicians">musicians</a> .......... <span class="small">good music people</span><br>
+        <a href="websites" class="websites">websites</a> .......... <span class="small">cool websites i've collected</span><br>
         <br>
-        <a href="/website/words" class="words">words</a> .......... <span class="small">poems and other things</span><br>
-        <a href="/website/blender">blender</a> .......... <span class="small">stuff i've made in blender</span><br>
-        <a href="/website/doodles" class="i">doodles</a> .......... <span class="small">stuff i draw</span><br>
-        <a href="/website/misc" class="misc">misc</a> .......... <span class="small">other things</span><br>
+        <a href="words" class="words">words</a> .......... <span class="small">poems and other things</span><br>
+        <a href="blender">blender</a> .......... <span class="small">stuff i've made in blender</span><br>
+        <a href="doodles" class="i">doodles</a> .......... <span class="small">stuff i draw</span><br>
+        <a href="misc" class="misc">misc</a> .......... <span class="small">other things</span><br>
         <br>
-        <a href="/website/buttons" class="buttons">buttons</a> .......... <span class="small">links to other websites</span><br>
-        <a href="/website/404.html"><s>guestbook</s></a> .......... <span class="small">say hi!</span><br>
-        <a href="/website/sitelog" class="log">sitelog</a> .......... <span class="small">changes to the site</span>
+        <a href="buttons" class="buttons">buttons</a> .......... <span class="small">links to other websites</span><br>
+        <a href="404.html"><s>guestbook</s></a> .......... <span class="small">say hi!</span><br>
+        <a href="sitelog" class="log">sitelog</a> .......... <span class="small">changes to the site</span>
     </div>
     </div>
     </body>
