--- a/newsite/index.html
+++ b/newsite/index.html
@@ -11,26 +11,30 @@
             margin: 0px;
             height: 100vh;
             font-family: 'Inter', sans-serif;}
-            .l, .r{height:100vh; display: grid; align-content: center;}
+            .l, .r{height:100vh; display: flex; align-content: center;}
 
             .l{background-color: #f0f0f0;}
             .r{background-color: #404040;
             color: #f0f0f0; padding: 0 20px}
-
+            img{width: 50%}
             p{margin: auto}
 
-            a{font-size: 2vw; color: #f0f0f0}
+            a{font-size: max(2vw, 2vh); color: #f0f0f0}
             a:hover{background-color: #f0f0f0; color: #404040; text-decoration-color: #f0f0f0}
+            @media only screen and (max-width: 800px){
+            body{display: inline}
+            .l, .r{height: 50vh}
+            img{height: 50%; width:auto}}
         </style></head>
 
     <body>
 
         <div class="l">
-            <img src="sit.png" style="margin: auto; border: solid #404040 0px; width: 50%; border-radius: 100%;">
+            <img src="misc/folder/sit.png" style="margin: auto; border: solid #404040 0px; border-radius: 100%;">
         </div>
 
         <div class="r">
-            <p style="font-size:5vw"><b>nowhere in<br>particular.</b><br>
+            <p style="font-size:max(5vw, 5vh)"><b>nowhere in<br>particular.</b><br>
             <a href="home">enter</a></p>
         </div>
     </body>
