--- a/newsite/buttons.html
+++ b/newsite/buttons.html
@@ -23,7 +23,7 @@
     
     <p>This is the place where we put any and all buttons of other sites! (as many as currently possible)<br>
     Oh and here's mine if you want to put it in your website for some reason<br></p><img src="misc/folder/nowhere.gif" alt="nowhere in particular"><br>
-    <div style="width: 500px">
+    <div>
     <details><summary>button code</summary><code>&lt;a href="https://cvni1981.github.io/website"&gt;&lt;img src="https://cvni1981.github.io/website/misc/folder/nowhere.gif" alt="nowhere in particular"&gt;&lt;/a&gt;</code></div></details>
     <h2>acquaintances</h2>
     <a href=https://tabby-the-tabby.neocities.org class="button"><img src=https://tabby-the-tabby.neocities.org/assets/tabbutton.gif alt="tabbutton"></a> 
