--- a/newsite/doodles/people.html
+++ b/newsite/doodles/people.html
@@ -2,37 +2,31 @@
 <html style="height:100%">
     <head>
         <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet"> 
-        <meta charset="UTF-8">
+        <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <title>people</title>
-        <link href="/website/styles/istyle.css" rel="stylesheet" type="text/css" media="all">
+        <link href="/website/newsite/styles/style.css" rel="stylesheet" type="text/css" media="all">
     <style>
-        body{background-image:url(/website/doodles/background.jpg);
+        body{background-image:url(/website/newsite/doodles/background.jpg);
             background-repeat:no-repeat;
             background-size:cover;
+            color: #101010;
+            font-family: 'Libre Baskerville', serif;
             background-attachment: fixed;}
+        .main{padding-top: 20px}
+        h1{font-size: min(10vw, 3rem); font-style: italic;}
+        h2{margin-bottom: 10px; font-style: italic; font-size: 1.5rem;}
+        h2::before{content: "- "; color: #5d5e6c;}
+        a{font-weight: bold; color: #101010; text-decoration-color:#5d5e6c;font-style: italic; text-decoration-thickness: 2px;}
+        a:hover{text-decoration-color:#101010; background-color: #101010; color: #a2a4a3}
+        a.button:hover{text-decoration-color:#00000000; background-color: #00000000}
+        .page{border-color: #5d5e6c}
         img{border: solid #080808 3px}
-        .header{border: solid 0px}
-        .main{width: 100%; padding-top: 20px}
     </style>
     </head>
 
     <body>
-        <nav><div style="margin: 20px">
-            <a href="/website">home</a><br>
-            <br>
-            <a href="/website/about">about</a><br>
-            <a href="/website/musicians">musicians</a><br>
-            <a href="/website/websites">websites</a><br>
-            <br>
-            <a href="/website/words">words</a><br>
-            <a href="/website/doodles">doodles</a> ←<br>
-            <a href="/website/blender">blender</a><br>
-            <a href="/website/misc">misc</a><br>
-            <br>
-            <a href="/website/buttons">buttons</a><br>
-            <a href="/website/sitelog">sitelog</a><br>
-        </div></nav>
         <div class="main">
+        <div class="page">
         <img src="/website/doodles/peopleheader.gif" alt="people" style="height:120px; margin-bottom:20px" class="header">
         <div id="drawings">
         <img src="/website/doodles/people/lonely.jpg" alt="lonely">
@@ -55,5 +49,6 @@
         <img src="/website/doodles/people/float.jpg" alt="float">
         <img src="/website/doodles/people/fear.jpg" alt="fear">
         <img src="/website/doodles/people/faces.jpg" alt="faces">
+        </div>
         </div>
     </body>
