--- a/newsite/doodles/people.html
+++ b/newsite/doodles/people.html
@@ -21,13 +21,13 @@
         a.button:hover{text-decoration-color:#00000000; background-color: #00000000}
         .page{border-color: #5d5e6c}
         img{border: solid #080808 3px}
+        .header{border: solid 0px}
     </style>
     </head>
 
     <body>
-        <div class="main">
-        <div class="page">
-        <img src="/website/doodles/peopleheader.gif" alt="people" style="height:120px; margin-bottom:20px" class="header">
+        <div class="main"><div class="page">
+        <img src="/website/doodles/peopleheader.gif" alt="people" style="width: 60%" class="header">
         <div id="drawings">
         <img src="/website/doodles/people/lonely.jpg" alt="lonely">
         <img src="/website/doodles/people/howdy.jpg" alt="howdy">
