--- a/newsite/doodles/people.html
+++ b/newsite/doodles/people.html
@@ -22,6 +22,9 @@
         .page{border-color: #5d5e6c}
         img{border: solid #080808 3px}
         .header{border: solid 0px}
+        #drawings{line-height:0; column-count: 3; column-gap: 12px; max-width: 700px; margin-top: 20px}
+        #drawings img{margin-bottom: 6px; width: 100%}
+        #drawings img:hover{transform: scale(125%)}
     </style>
     </head>
 
