--- a/newsite/doodles/people.html
+++ b/newsite/doodles/people.html
@@ -29,7 +29,7 @@
     </head>
 
     <body>
-        <div class="main"><div class="page">
+        <div class="page"><div class="main">
         <img src="/website/doodles/peopleheader.gif" alt="people" style="width: 60%" class="header">
         <div id="drawings">
         <img src="/website/doodles/people/lonely.jpg" alt="lonely">
