--- a/newsite/doodles/people.html
+++ b/newsite/doodles/people.html
@@ -30,28 +30,28 @@
 
     <body>
         <div class="page"><div class="main">
-        <img src="/website/doodles/peopleheader.gif" alt="people" style="width: 60%" class="header">
+        <img src="peopleheader.gif" alt="people" style="width: 60%" class="header">
         <div id="drawings">
-        <img src="/website/doodles/people/lonely.jpg" alt="lonely">
-        <img src="/website/doodles/people/howdy.jpg" alt="howdy">
-        <img src="/website/doodles/people/lookup.jpg" alt="lookup">
-        <img src="/website/doodles/people/out.jpg" alt="out">
-        <img src="/website/doodles/people/yay.jpg" alt="yay">
-        <img src="/website/doodles/people/tall.jpg" alt="tall">
-        <img src="/website/doodles/people/annoyed.jpg" alt="annoyed">
-        <img src="/website/doodles/people/guy.jpg" alt="guy">
-        <img src="/website/doodles/people/aslep.jpg" alt="aslep">
-        <img src="/website/doodles/people/aww.jpg" alt="aww">
-        <img src="/website/doodles/people/aww.png" alt="aww2">
-        <img src="/website/doodles/people/hmm.jpg" alt="hmm">
-        <img src="/website/doodles/people/sitting.jpg" alt="sitting">
-        <img src="/website/doodles/people/stairs.jpg" alt="stairs">
-        <img src="/website/doodles/people/eh.jpg" alt="eh">
-        <img src="/website/doodles/people/really.jpg" alt="really">
-        <img src="/website/doodles/people/untitled.png" alt="untitled">
-        <img src="/website/doodles/people/float.jpg" alt="float">
-        <img src="/website/doodles/people/fear.jpg" alt="fear">
-        <img src="/website/doodles/people/faces.jpg" alt="faces">
+        <img src="people/lonely.jpg" alt="lonely">
+        <img src="people/howdy.jpg" alt="howdy">
+        <img src="people/lookup.jpg" alt="lookup">
+        <img src="people/out.jpg" alt="out">
+        <img src="people/yay.jpg" alt="yay">
+        <img src="people/tall.jpg" alt="tall">
+        <img src="people/annoyed.jpg" alt="annoyed">
+        <img src="people/guy.jpg" alt="guy">
+        <img src="people/aslep.jpg" alt="aslep">
+        <img src="people/aww.jpg" alt="aww">
+        <img src="people/aww.png" alt="aww2">
+        <img src="people/hmm.jpg" alt="hmm">
+        <img src="people/sitting.jpg" alt="sitting">
+        <img src="people/stairs.jpg" alt="stairs">
+        <img src="people/eh.jpg" alt="eh">
+        <img src="people/really.jpg" alt="really">
+        <img src="people/untitled.png" alt="untitled">
+        <img src="people/float.jpg" alt="float">
+        <img src="people/fear.jpg" alt="fear">
+        <img src="people/faces.jpg" alt="faces">
         </div>
         </div>
     </body>
