--- a/newsite/doodles/people.html
+++ b/newsite/doodles/people.html
@@ -25,9 +25,8 @@
         #drawings{line-height:0; column-count: 1; column-gap: 12px; margin-top: 20px}
         #drawings img{margin-bottom: 6px; width: 100%}
         #drawings img:hover{transform: scale(125%)}
-        @media only screen and (min-width: 650px){
-            #drawing{column-count: 2;}
-        }
+        @media only screen and (min-width: 500px){
+            #drawings{column-count: 2;}}
     </style>
     </head>
 
