--- a/newsite/doodles/people.html
+++ b/newsite/doodles/people.html
@@ -20,7 +20,7 @@
         a:hover{text-decoration-color:#101010; background-color: #101010; color: #a2a4a3}
         a.button:hover{text-decoration-color:#00000000; background-color: #00000000}
         .page{border-color: #5d5e6c}
-        img{border: solid #080808 0.4vw}
+        img{border: solid #080808 min(3px, 0.6vw)}
         .header{border: solid 0px}
         #drawings{line-height:0; column-count: 1; column-gap: 12px; margin-top: 20px}
         #drawings img{margin-bottom: 6px; width: 100%}
