--- a/newsite/home.html
+++ b/newsite/home.html
@@ -6,7 +6,7 @@
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <title>nowhere in particular</title>
         <link href="styles/style.css" rel="stylesheet" type="text/css" media="all"><style>
-            .page{width: min(85%, 45rem)}
+            .page{width: min(85%, 45rem); padding-bottom: 10vh}
             a.buttons:hover{background-color: #7ba0cc; 
             text-decoration-color:#7ba0cc; color: #404040; }
             a.misc:hover{background-color: #202020;
