--- a/newsite/doodles/etc.html
+++ b/newsite/doodles/etc.html
@@ -32,7 +32,7 @@
 
     <body>
     <div class="page"><div class="main">
-        <img src="etcheader.gif" alt="etc" style="width: 60%" class="header"><br>< <a class="back" href="home">home</a>
+        <img src="etcheader.gif" alt="etc" style="width: 60%" class="header"><br>< <a class="back" href="/website/newsite/doodles">home</a>
         <div id="drawings">
         <img src="etc/creatures2.jpg" alt="creatures2">
         <img src="etc/noise.jpg" alt="noise">
