--- a/newsite/doodles/ruler_and_compass.html
+++ b/newsite/doodles/ruler_and_compass.html
@@ -32,7 +32,7 @@
 
     <body>
         <div class="page"><div class="main">
-            <img src="/website/doodles/racheader.gif" alt="ruler and compass" style="width: 60%" class="header"><br>< <a class="back" href="home">home</a>
+            <img src="/website/doodles/racheader.gif" alt="ruler and compass" style="width: 60%" class="header"><br>< <a class="back" href="/website/newsite/doodles">home</a>
             <p>This used to be the thing i did the most since, maybe the start of 2021, and i have a big bunch of geometrical things, i PROMISE this won't be this empty forever</p>
             <div id="drawings">
             <img src="rac/eye.jpg" alt="eye">
