--- a/newsite/doodles/people.html
+++ b/newsite/doodles/people.html
@@ -32,7 +32,7 @@
 
     <body>
         <div class="page"><div class="main">
-        <img src="peopleheader.gif" alt="people" style="width: 60%" class="header"><br>< <a class="back" href="home">home</a>
+        <img src="peopleheader.gif" alt="people" style="width: 60%" class="header"><br>< <a class="back" href="/website/newsite/doodles">home</a>
         <div id="drawings">
         <img src="people/lonely.jpg" alt="lonely">
         <img src="people/howdy.jpg" alt="howdy">
