--- a/newsite/misc.html
+++ b/newsite/misc.html
@@ -8,7 +8,7 @@
         </style></head>
 
     <body><div class="page"><div class="main">
-        <h1>misc</h1>
+        <h1 style="font-size: 3rem">misc</h1>
 
         <p>After going down the stairs and into the basement, you wander into a green door.
             <br>You step into a dark room, it's completely empty and somehow lit by a monochromatic green light. It's slightly nauseating.
