--- a/newsite/doodles/people.html
+++ b/newsite/doodles/people.html
@@ -34,6 +34,11 @@
         <div class="page"><div class="main">
         <img src="peopleheader.gif" alt="people" style="width: 60%" class="header"><br>< <a class="back" href="/website/newsite/doodles">home</a>
         <div id="drawings">
+        <img src="people/guy2.jpg" alt="guy2">
+        <img src="people/pointing.jpg" alt="pointing">
+        <img src="people/fingergun.jpg" alt="fingergun">
+        <img src="people/death.jpg" alt="death">
+        <img src="people/sit.jpg" alt="sit">
         <img src="people/lonely.jpg" alt="lonely">
         <img src="people/howdy.jpg" alt="howdy">
         <img src="people/lookup.jpg" alt="lookup">
