--- a/newsite/about.html
+++ b/newsite/about.html
@@ -14,7 +14,7 @@
 
     <body><div class="page"><div class="main">
     <h1>about me</h1>
-    <a class="back" href="home">← home</a>
+    ← <a class="back" href="home">home</a>
 
     <div class="about">
     <div style="display: flex"><img src="dingus.png" alt="dingus" style="align-self: center; border-radius: 100%"></div>
