--- a/newsite/musicians.html
+++ b/newsite/musicians.html
@@ -18,7 +18,7 @@
 
     <body><div class="page"><div class="main">
     <h1>favorite musicians</h1>
-    <a class="back" href="home">← home</a>
+    ← <a class="back" href="home">home</a>
     
         <p>These are some musicians who i listen/listened to a lot. I recommend checking them out! (<a href="" class="bandcamp">blue links</a> lead to bandcamp and <a href="" class="spotify">green links</a> lead to spotify)</p>
         <ul id="list">
