--- a/newsite/sitelog.html
+++ b/newsite/sitelog.html
@@ -21,7 +21,7 @@
 
     <body><div class="page"><div class="main">
     <h1><i>sitelog</i></h1>
-    <a class="back" href="home">← home</a>
+    ← <a class="back" href="home">home</a>
 
     <p><b>More about the site: </b> I make this site with Firefox in Ubuntu, with a crappy 1366x768 display<br>did my best to make it look decent on mobile, if there's something wrong, please tell me!<br>in existence since july 2022<br>and that's it! enjoy the sitelog ig</p>
     <div id="entry">
