--- a/newsite/words.html
+++ b/newsite/words.html
@@ -5,7 +5,7 @@
         <title>words</title>
         <link href="styles/text-style.css" rel="stylesheet" type="text/css" media="all"><style>
             @import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400&display=swap');
-        summary{font-size: x-large}
+        summary{font-size: 2rem}
         ul{margin-top:0px}
         .small{font-weight: normal; text-decoration-thickness: 1px}
         details{margin: 10px 0}
@@ -26,7 +26,7 @@
             </details>
 
         <a href="words/diary.html" style="font-size: x-large; margin-top:0px">diary</a><br>
-        <a href="words/blips.html" style="font-size: x-large">blips</a>
+        <a href="words/blips.html" style="font-size: x-large">blips</a> (non-mobile friendly (yet))
 
         <details><summary><a>poems</a></summary>
         <ul>
