--- a/newsite/words.html
+++ b/newsite/words.html
@@ -25,8 +25,8 @@
                 mi o pali e nimi mute sin a</p>
             </details>
 
-        <a href="words/diary.html" style="font-size: x-large; margin-top:0px">diary</a><br>
-        <a href="words/blips.html" style="font-size: x-large">blips</a> (non-mobile friendly (yet))
+        <a href="words/diary.html" style="margin-top:0px">diary</a><br>
+        <a href="words/blips.html" style="">blips</a> (non-mobile friendly (yet))
 
         <details><summary><a>poems</a></summary>
         <ul>
