--- a/newsite/words.html
+++ b/newsite/words.html
@@ -26,23 +26,23 @@
             </details>
 
         <a href="words/diary.html" style="margin-top:0px">diary</a><br>
-        <a href="words/blips.html" style="">blips</a> (non-mobile friendly (yet))
+        <a href="words/blips.html">blips</a>
 
         <details><summary><a>poems</a></summary>
         <ul>
-            <li><a href="/website/words/vento">vento <span class="small">(152 pal.)</span></a></li>
-            <li><a href="/website/words/sona-pini">sona pini <span class="small">(nimi 124)</span></a></li>
-            <li><a href="/website/words/ona">ona <span class="small">(nimi 41)</span></a></li>
-            <li><a href="/website/words/tomo-ni">tomo ni <span class="small">(nimi 115)</span></a></li>
-            <li><a href="/website/words/suno">suno <span class="small">(nimi 218)</span></a></li>
-            <li><a href="/website/words/jan">jan <span class="small">(nimi 308)</span></a></li>
-            <li><a href="/website/words/concreto">concreto <span class="small">(nimi 8)</span></a></li>
+            <li><a href="words/vento">vento <span class="small">(152 pal.)</span></a></li>
+            <li><a href="words/sona-pini">sona pini <span class="small">(nimi 124)</span></a></li>
+            <li><a href="words/ona">ona <span class="small">(nimi 41)</span></a></li>
+            <li><a href="words/tomo-ni">tomo ni <span class="small">(nimi 115)</span></a></li>
+            <li><a href="words/suno">suno <span class="small">(nimi 218)</span></a></li>
+            <li><a href="words/jan">jan <span class="small">(nimi 308)</span></a></li>
+            <li><a href="words/concreto">concreto <span class="small">(nimi 8)</span></a></li>
         </ul>
         </details>
         <details><summary><a>longer texts</a></summary>
         <ul>
-            <li><a href="/website/words/originalidade">originalidade <span style="font-weight:normal">(997 pal.)</span></a></li>
-            <li><a href="/website/words/len-pi-laso-telo">len pi laso telo <span style="font-weight:normal">(nimi 647)</span></a></li>
-            <li><a href="/website/words/tomo-pi-esun-lipu">tomo pi esun lipu <span style="font-weight:normal">(nimi 860)</span></a></li>
+            <li><a href="words/originalidade">originalidade <span style="font-weight:normal">(997 pal.)</span></a></li>
+            <li><a href="words/len-pi-laso-telo">len pi laso telo <span style="font-weight:normal">(nimi 647)</span></a></li>
+            <li><a href="words/tomo-pi-esun-lipu">tomo pi esun lipu <span style="font-weight:normal">(nimi 860)</span></a></li>
         </ul></details>
     </div></div></body></html>
