--- a/newsite/words/diary.html
+++ b/newsite/words/diary.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-    <head><title>diary</title><style>
+    <head><title>diary</title>
+    <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1"><style>
     @import url('https://fonts.googleapis.com/css2?family=Archivo:wght@400&display=swap');
     @import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@1,400&display=swap');
     body{
