--- a/newsite/words/diary.html
+++ b/newsite/words/diary.html
@@ -10,11 +10,11 @@
         width: 100vw;
         color: #d0d0d0;
         font-family: 'Archivo', sans-serif;
-        font-size: 4vh; line-height: 1.4}
+        font-size: 1.5rem; line-height: 1.4}
         a{color: #d0d0d0; text-decoration-thickness: 2px}
     </style></head>
     <body>
-        <p style="width: fit-content; margin: 50px 300px 50px 100px">hi! um
+        <p style="width: fit-content; margin: 50px">hi! um
             <br>so i'm just gonna start this... uhmm...
             <br>uh hello! heh
             <br>
