--- a/newsite/words/concreto.html
+++ b/newsite/words/concreto.html
@@ -1,31 +1,18 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="UTF-8">
-        <title>words: concreto</title>
-        <link href="/website/styles/text-style.css" rel="stylesheet" type="text/css" media="all">
+        <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
+        <title>words</title>
+        <link href="styles/text-style.css" rel="stylesheet" type="text/css" media="all">
         <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@600&display=swap" rel="stylesheet">
         <style>
         @import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400&display=swap');
         @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@600&display=swap');
-        </style> 
-    <body><nav><div style="margin: 20px">
-        <a href="/website">home</a><br>
-        <br>
-        <a href="/website/about">about</a><br>
-        <a href="/website/musicians">musicians</a><br>
-        <a href="/website/websites">websites</a><br>
-        <br>
-        <a href="/website/words">words</a> ←<br>
-        <a href="/website/doodles">doodles</a><br>
-        <a href="/website/blender">blender</a><br>
-        <a href="/website/misc">misc</a><br>
-        <br>
-        <a href="/website/buttons">buttons</a><br>
-        <a href="/website/sitelog">sitelog</a><br>
-    </div></nav>
-    <div class="main">
+        </style></head>
+
+    <body><div class="page"><div class="main">
         <h1>concreto</h1>
+        ← <a class="back" href="home">back</a>
         <pre style="padding: 10px; font-size: larger; font-family: 'Noto Sans Mono', monospace; line-height: 1">
 
     me   memo   memória   ria<br>
@@ -39,5 +26,4 @@
     s  ss  sss  ss  s<br>
     e—         não.
         </pre>
-    </div>
-    </body>
+    </div></div></body></html>
