--- a/newsite/words/concreto.html
+++ b/newsite/words/concreto.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <title>words</title>
-        <link href="styles/text-style.css" rel="stylesheet" type="text/css" media="all">
+        <link href="/website/newsite/styles/text-style.css" rel="stylesheet" type="text/css" media="all">
         <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@600&display=swap" rel="stylesheet">
         <style>
         @import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400&display=swap');
