--- a/newsite/words/concreto.html
+++ b/newsite/words/concreto.html
@@ -15,15 +15,14 @@
         ← <a class="back" href="home">back</a>
         <pre style="padding: 10px; font-family: 'Noto Sans Mono', monospace; line-height: 1">
 
-    me   memo   memória   ria<br>
-                          ia<br>
-    pha fálha palha lia   a<br>
+me   memo   memória   ria<br>
+                      ia<br>
+pha fálha palha lia   a<br>
 
-    ex xis iste tente ente<br>
-    porém insta tantâneo<br>
+ex xis iste tente ente<br>
 
-    i  i  i  i  i  i  is<br>
-    s  ss  sss  ss  s<br>
-    e—         não.
-        </pre>
+porém insta tantâneo<br>
+i  i  i  i  i  i  is<br>
+s  ss  sss  ss  s<br>
+e—         não.</pre>
     </div></div></body></html>
