--- a/newsite/words.html
+++ b/newsite/words.html
@@ -12,7 +12,7 @@
         </style></head>
 
     <body><div class="page"><div class="main">
-        <h1>words</h1>
+        <h1 style="font-size: min(13vw, 3rem)">words</h1>
         ← <a class="back" href="home">home</a>
         <br>
         <details><summary><a>about</a></summary>
