--- a/newsite/words/concreto.html
+++ b/newsite/words/concreto.html
@@ -13,7 +13,7 @@
     <body><div class="page"><div class="main">
         <h1>concreto</h1>
         ← <a class="back" href="home">back</a>
-        <pre style="padding: 10px; font-family: 'Noto Sans Mono', monospace; line-height: 1">
+        <pre style="padding: 10px; font-size: min(1.25rem, 4vw); font-family: 'Noto Sans Mono', monospace; line-height: 1">
 
 me   memo   memória   ria<br>
                       ia<br>
