--- a/newsite/words/concreto.html
+++ b/newsite/words/concreto.html
@@ -12,7 +12,7 @@
 
     <body><div class="page"><div class="main">
         <h1>concreto</h1>
-        ← <a class="back" href="home">back</a>
+        ← <a class="back" href="/website/newsite/words">back</a>
         <pre style="padding: 10px; font-size: min(1.25rem, 4vw); font-family: 'Noto Sans Mono', monospace; line-height: 1">
 
 me   memo   memória   ria<br>
