--- a/newsite/words/len-pi-laso-telo.html
+++ b/newsite/words/len-pi-laso-telo.html
@@ -1,28 +1,16 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="UTF-8">
+        <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <title>words: len pi laso telo</title>
-        <link href="/website/styles/text-style.css" rel="stylesheet" type="text/css" media="all">
-        <style>@import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400&display=swap');</style> 
-    <body><nav><div style="margin: 20px">
-        <a href="/website">home</a><br>
-        <br>
-        <a href="/website/about">about</a><br>
-        <a href="/website/musicians">musicians</a><br>
-        <a href="/website/websites">websites</a><br>
-        <br>
-        <a href="/website/words">words</a> ←<br>
-        <a href="/website/doodles">doodles</a><br>
-        <a href="/website/blender">blender</a><br>
-        <a href="/website/misc">misc</a><br>
-        <br>
-        <a href="/website/buttons">buttons</a><br>
-        <a href="/website/sitelog">sitelog</a><br>
-    </div></nav>
-        <div class="main">
+        <link href="/website/newsite/styles/text-style.css" rel="stylesheet" type="text/css" media="all">
+        <style>
+        @import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400&display=swap');
+        </style></head>
 
+    <body><div class="page"><div class="main">
         <h1>len pi laso telo</h1>
+        ← <a class="back" href="/website/newsite/words">back</a>
         <p style="padding: 10px">
         toki a.
         <br>mi lon tomo tawa telo suli tan ni: mi tawa tomo pi jan majuna mi.
@@ -112,5 +100,4 @@
         <br>ni la toki mi li pini.
         <br>ken la, mi toki lon suno kama.
         <br>mi tawa a...</p>
-    </div>
-    </body>
+    </div></div></body></html>
