changed the style of all other words

--- a/newsite/words/vento.html
+++ b/newsite/words/vento.html
@@ -1,29 +1,18 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
     <head>
-        <meta charset="UTF-8">
+        <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <title>words: vento</title>
-        <link href="/website/styles/text-style.css" rel="stylesheet" type="text/css" media="all">
-        <style>@import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400&display=swap');</style> 
-    <body><nav><div style="margin: 20px">
-        <a href="/website">home</a><br>
-        <br>
-        <a href="/website/about">about</a><br>
-        <a href="/website/musicians">musicians</a><br>
-        <a href="/website/websites">websites</a><br>
-        <br>
-        <a href="/website/words">words</a> ←<br>
-        <a href="/website/doodles">doodles</a><br>
-        <a href="/website/blender">blender</a><br>
-        <a href="/website/misc">misc</a><br>
-        <br>
-        <a href="/website/buttons">buttons</a><br>
-        <a href="/website/sitelog">sitelog</a><br>
-    </div></nav>
-        <div class="main">
+        <link href="/website/newsite/styles/text-style.css" rel="stylesheet" type="text/css" media="all">
+        <style>
+        @import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400&display=swap');
+        </style></head>
 
+    <body><div class="page"><div class="main">
         <h1>vento</h1>
-        <p style="padding: 10px">
+        ← <a class="back" href="/website/newsite/words">back</a>
+        <p>
             Numa manhã fria.
             <br>Saio dos meus aposentos em rumo ao meu colégio.
             <br>Café tomado, roupa vestida, mochila pesada.
@@ -57,5 +46,4 @@
             <br>Momentos como esse me fascinam.
             <br>Um vento me lembra a vida.
         </p>
-    </div>
-    </body>
+    </div></div></body></html>
