--- a/newsite/words/ona.html
+++ b/newsite/words/ona.html
@@ -1,29 +1,17 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="UTF-8">
+        <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <title>words: ona</title>
-        <link href="/website/styles/text-style.css" rel="stylesheet" type="text/css" media="all">
-        <style>@import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400&display=swap');</style> 
-    <body><nav><div style="margin: 20px">
-        <a href="/website">home</a><br>
-        <br>
-        <a href="/website/about">about</a><br>
-        <a href="/website/musicians">musicians</a><br>
-        <a href="/website/websites">websites</a><br>
-        <br>
-        <a href="/website/words">words</a> ←<br>
-        <a href="/website/doodles">doodles</a><br>
-        <a href="/website/blender">blender</a><br>
-        <a href="/website/misc">misc</a><br>
-        <br>
-        <a href="/website/buttons">buttons</a><br>
-        <a href="/website/sitelog">sitelog</a><br>
-    </div></nav>
-        <div class="main">
+        <link href="/website/newsite/styles/text-style.css" rel="stylesheet" type="text/css" media="all">
+        <style>
+        @import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400&display=swap');
+        </style></head>
 
+    <body><div class="page"><div class="main">
         <h1>ona</h1>
-        <p style="padding: 10px">
+        ← <a class="back" href="/website/newsite/words">back</a>
+        <p>
         ona li powe.
         <br>mi pali e ona.
         <br>tan la mi sona ala.
@@ -37,5 +25,4 @@
         <br>pilin la mi majuna.
         <br>mi pakala.
         </p>
-    </div>
-    </body>
+    </div></div></body></html>
