--- a/newsite/words/sona-pini.html
+++ b/newsite/words/sona-pini.html
@@ -1,29 +1,19 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>words: sona pini</title>
-        <link href="/website/styles/text-style.css" rel="stylesheet" type="text/css" media="all">
-        <style>@import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400&display=swap');</style>     
-        <body><nav><div style="margin: 20px">
-            <a href="/website">home</a><br>
-            <br>
-            <a href="/website/about">about</a><br>
-            <a href="/website/musicians">musicians</a><br>
-            <a href="/website/websites">websites</a><br>
-            <br>
-            <a href="/website/words">words</a> ←<br>
-            <a href="/website/doodles">doodles</a><br>
-            <a href="/website/blender">blender</a><br>
-            <a href="/website/misc">misc</a><br>
-            <br>
-            <a href="/website/buttons">buttons</a><br>
-            <a href="/website/sitelog">sitelog</a><br>
-        </div></nav>
-        <div class="main">
-
-        <h1>sona pini</h1>
-        <p style="padding: 10px">
+    <!DOCTYPE html>
+    <html>
+        <head>
+            <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
+            <title>words: sona pini</title>
+            <link href="/website/newsite/styles/text-style.css" rel="stylesheet" type="text/css" media="all">
+            <style>
+            @import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400&display=swap');
+            </style></head>
+    
+        <body><div class="page"><div class="main">
+            <h1>sona pini</h1>
+            ← <a class="back" href="/website/newsite/words">back</a>
+            <p>
         tenpo kama la mi sona ala sona e ni?
         <br>lon weka mi?
         <br>li sona ala sona e kule musi e suno?
@@ -43,5 +33,4 @@
         <br>lon jan li sona pini.
         <br>li pali pi sona pini li kama jo pi sona pini.
         </p>
-    </div>
-    </body>
+    </div></div></body></html>
