--- a/newsite/words.html
+++ b/newsite/words.html
@@ -26,7 +26,7 @@
             </details>
 
         <a href="words/diary.html" style="margin-top:0px">diary</a><br>
-        <a href="words/blips.html">blips</a>
+        <a href="words/blips.html">blips</a> (non-mobile friendly)
 
         <details><summary><a>poems</a></summary>
         <ul>
