--- a/newsite/words/tomo-ni.html
+++ b/newsite/words/tomo-ni.html
@@ -13,7 +13,7 @@
         ← <a class="back" href="/website/newsite/words">back</a>
         <p>
         tomo ni li suli a
-        <br>sinpin ona li laso teSlo walo
+        <br>sinpin ona li laso telo walo
         <br>kule ni li pona mute mute tawa mi
         <br>supa lape li lon
         <br>ona li suli li puwa li pona
