--- a/newsite/home.html
+++ b/newsite/home.html
@@ -6,7 +6,7 @@
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <title>nowhere in particular</title>
         <link href="styles/style.css" rel="stylesheet" type="text/css" media="all"><style>
-            .page{width: min(85%, 45rem); padding-bottom: 10vh}
+            .page{width: min(85%, 45rem)}
             a.buttons:hover{background-color: #7ba0cc; 
             text-decoration-color:#7ba0cc; color: #404040; }
             a.misc:hover{background-color: #202020;
@@ -33,7 +33,7 @@
 
         </style></head>
 
-    <body><div class="page"><div class="main">
+    <body><div class="page"><div class="main" style="padding-bottom: 2rem">
     <h1>nowhere in particular.</h1>
     <p>Hi! Welcome to my bit of the web where i put stuff i like, stuff i do and other things too. (hey that rhymed)<br>
     I... don't know how to explain or express this place exactly. It's got places you can go that have stuff in them you might want to look at. Basically.<br>
