--- a/newsite/websites/geo.html
+++ b/newsite/websites/geo.html
@@ -1,29 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap" rel="stylesheet"> 
-        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@800&display=swap" rel="stylesheet"> 
-        <meta charset="UTF-8">
+        <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <title>websites: geography</title>
-        <link href="/website/styles/sitestyle.css" rel="stylesheet" type="text/css" media="all"></head>
-
-    <body><nav><div style="margin: 20px">
-        <a href="/website">home</a><br>
-        <br>
-        <a href="/website/about">about</a><br>
-        <a href="/website/musicians">musicians</a><br>
-        <a href="/website/websites">websites</a> ←<br>
-        <br>
-        <a href="/website/words">words</a><br>
-        <a href="/website/doodles">doodles</a><br>
-        <a href="/website/blender">blender</a><br>
-        <a href="/website/misc">misc</a><br>
-        <br>
-        <a href="/website/buttons">buttons</a><br>
-        <a href="/website/sitelog">sitelog</a><br>
-    </div></nav>
-    <div class="main">
+        <link href="styles/sitestyle.css" rel="stylesheet" type="text/css" media="all"><style>
+        </style></head>
+    <body><div class="page"><div class="main">
         <h1>geography and flags</h1>
+        ← <a class="back" href="/website/newsite/webites">back</a>
         <h2>→ <a href="https://www.jasondavies.com/maps/transition/">Map Projection Transitions</a></h2>
         <p>An awesome visualization by Jason Davies of many map projections. <a href="https://www.jasondavies.com/maps/">Their website</a> also has many other cool map stuffs.</p>
 
