--- a/newsite/websites/geo.html
+++ b/newsite/websites/geo.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <title>websites: geography</title>
-        <link href="styles/sitestyle.css" rel="stylesheet" type="text/css" media="all"><style>
+        <link href="/website/newsite/styles/sitestyle.css" rel="stylesheet" type="text/css" media="all"><style>
         </style></head>
     <body><div class="page"><div class="main">
         <h1>geography and flags</h1>
