--- a/newsite/blender.html
+++ b/newsite/blender.html
@@ -6,10 +6,7 @@
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <title>about</title>
         <link href="styles/style.css" rel="stylesheet" type="text/css" media="all"><style>
-        .pyramid{
-            background-color: #000429; 
-            color:#ddba39}
-        .pyramid:hover{text-decoration-color: #ddba39;}
+        .pyramid:hover{text-decoration-color: #000429; color: #ddba39; background-color: #000429}
         </style></head>
 
     <body><div class="page"><div class="main">
@@ -19,15 +16,15 @@
             <br>btw, all the images/gifs (just like all of the site) are licensed under <a href="/website/LICENSE.txt" >GPLv3</a>.
         </p>
         <ul>
-            <li><a href="/website/blender/pyramids" class="pyramid" >pyramids (4)</a></li>
-            <li><a href="/website/blender/buttons">buttons (7)</a></li>
-            <li><a href="/website/blender/cmyk">cmyk (5)</a></li></ul>
+            <li><a href="blender/pyramids" class="pyramid" >pyramids (4)</a></li>
+            <li><a href="blender/buttons">buttons (7)</a></li>
+            <li><a href="blender/cmyk">cmyk (5)</a></li></ul>
         <br>
-        <img src="/website/blender/ampersand.png" alt="ampersand" width="500px">
-        <img src="/website/blender/angle2.png" alt="angle2" width="500px">
-        <img src="/website/blender/arrow2.png" alt="arrow2" width="500px">
-        <img src="/website/blender/cloud.png" alt="cloud" width="500px">
-        <img src="/website/blender/cuberootof2.png" alt="cuberootof2" width="500px">
-        <img src="/website/blender/idk2.png" alt="idk2" width="500px">
-        <img src="/website/blender/lines.png" alt="lines" width="500px">
+        <img src="blender/ampersand.png" alt="ampersand" width="100%">
+        <img src="blender/angle2.png" alt="angle2" width="100%">
+        <img src="blender/arrow2.png" alt="arrow2" width="100%">
+        <img src="blender/cloud.png" alt="cloud" width="100%">
+        <img src="blender/cuberootof2.png" alt="cuberootof2" width="100%">
+        <img src="blender/idk2.png" alt="idk2" width="100%">
+        <img src="blender/lines.png" alt="lines" width="100%">
     </div></div></body></html>
